force-app/main/default/objects/Revenue_Reconciliation__c/Revenue_Reconciliation__c.object-meta.xml
<CustomObject>
    <label>Revenue Reconciliation</label>
    <pluralLabel>Revenue Reconciliations</pluralLabel>
    <nameField>
        <displayFormat>RRC-{00000000}</displayFormat>
        <label>Revenue Reconciliation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>Private</sharingModel>
</CustomObject>