force-app/main/default/objects/Revenue_Reconciliation__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <label>Assigned To</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Assigned Reconciliations</relationshipLabel>
    <relationshipName>Assigned_Reconciliations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>