force-app/main/default/objects/Revenue_Reconciliation__c/fields/Candidate_Deal__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Deal__c</fullName>
    <label>Candidate Deal</label>
    <type>Lookup</type>
    <referenceTo>Deal_Registration__c</referenceTo>
    <relationshipLabel>Candidate Reconciliations</relationshipLabel>
    <relationshipName>Candidate_Reconciliations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>