force-app/main/default/objects/Revenue_Reconciliation__c/fields/Candidate_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Candidate_Opportunity__c</fullName>
    <label>Candidate Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Candidate Reconciliations</relationshipLabel>
    <relationshipName>Candidate_Reconciliations2</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>