force-app/main/default/objects/Revenue_Reconciliation__c/fields/Match_Method__c.field-meta.xml
<CustomField>
    <fullName>Match_Method__c</fullName>
    <label>Match Method</label>
    <length>40</length>
    <type>Text</type>
</CustomField>