force-app/main/default/objects/Revenue_Reconciliation__c/fields/Resolution__c.field-meta.xml
<CustomField>
    <fullName>Resolution__c</fullName>
    <label>Resolution</label>
    <length>40</length>
    <type>Text</type>
</CustomField>