force-app/main/default/objects/Revenue_Reconciliation__c/fields/Resolution_Reason__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Reason__c</fullName>
    <label>Resolution Reason</label>
    <length>2000</length>
    <type>LongTextArea</type>
</CustomField>