force-app/main/default/objects/Revenue_Reconciliation__c/fields/Resolved_By__c.field-meta.xml
<CustomField>
    <fullName>Resolved_By__c</fullName>
    <label>Resolved By</label>
    <type>Lookup</type>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Resolved Reconciliations</relationshipLabel>
    <relationshipName>Resolved_Reconciliations</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>